<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_app">Qualix</string>
    <string name="desc_app">Artificial intelligence based food quality solutions</string>

    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_select_scan">Scan management</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_device">Add device</string>
    <string name="title_permission">Permissions</string>
    <string name="title_quality_map">Quality map</string>
    <string name="title_menu">Menu</string>
    <string name="title_generate_qr">Generate QR code</string>
    <string name="title_sync_data">Sync data</string>
    <string name="title_mark_plot">Mark plot</string>
    <string name="title_plot_marked">Plot marked</string>
    <string name="title_inbox">Inbox</string>

    <string name="logout_msg">Are you sure you want to logout?</string>

    <string name="hint_otp">OTP</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_field">Field</string>
    <string name="hint_email">Email</string>
    <string name="hint_location">Location</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_change_pwd">Change password</string>
    <string name="hint_village">Village</string>
    <string name="hint_query">Enter farmer code or phone</string>
    <string name="hint_lot_id">Lot ID</string>
    <string name="hint_sample_id">Sample ID</string>
    <string name="hint_truck_no">Truck number*</string>
    <string name="hint_area_covered">Area covered</string>
    <string name="hint_quantity">Quantity*</string>

    <string name="hint_user_id">User ID</string>
    <string name="hint_device_imei">IMEI number</string>
    <string name="hint_device_name">Device name</string>

    <string name="btn_scan_continue">Scan &amp; continue</string>
    <string name="btn_save_share">Save &amp; share</string>
    <string name="btn_enable_camera">Enable camera</string>
    <string name="btn_scan_results">Scan results</string>

    <string name="select_variety_msg">Please select a variety!</string>
    <string name="empty_lot_id">Lot ID can\'t be empty!</string>
    <string name="empty_sample_id">Sample ID can\'t be empty!</string>
    <string name="empty_quantity">Quantity can\'t be empty!</string>
    <string name="empty_user_id">User ID can\'t be empty!</string>
    <string name="empty_device_imei">IMEI number can\'t be empty!</string>
    <string name="empty_device_name">Device name can\'t be empty!</string>

    <string name="empty_otp_msg">OTP can\'t be empty!</string>
    <string name="empty_notifications_msg">Whoops! We couldn\'t find any notifications!</string>
    <string name="empty_suppliers_msg">Whoops! We couldn\'t find any suppliers!</string>
    <string name="empty_commodities_msg">Whoops! We couldn\'t find any commodities!</string>
    <string name="empty_varieties_msg">Whoops! We couldn\'t find any varieties!</string>
    <string name="empty_analyses_msg">Whoops! We couldn\'t find any analyses!</string>
    <string name="empty_scans_msg">Whoops! We couldn\'t find any scans!</string>
    <string name="empty_username_msg">Username can\'t be empty!</string>
    <string name="empty_password_msg">Password can\'t be empty!</string>
    <string name="empty_phone_msg">Phone can\'t be empty!</string>
    <string name="empty_field_msg">Field can\'t be empty!</string>
    <string name="empty_email_msg">Email can\'t be empty!</string>
    <string name="empty_name_msg">Name can\'t be empty!</string>
    <string name="empty_village_msg">Village can\'t be empty!</string>
    <string name="empty_qrcode_msg">QR code can\'t be empty!</string>

    <string name="invalid_name_msg">Invalid name!</string>
    <string name="invalid_phone_msg">Invalid phone!</string>
    <string name="invalid_email_msg">Invalid email!</string>
    <string name="invalid_username_msg">Invalid username!</string>
    <string name="invalid_password_msg">Password should be alpha numeric! (min 8 chars)</string>
    <string name="password_mismatch_msg">Password mismatch!</string>
    <string name="password_same_msg">Old &amp; new password can\'t be same!</string>

    <string name="forgot_password_msg">Forgot password?</string>
    <string name="signup_msg">Don\'t have an account? Contact Admin</string>
    <string name="contact_admin">Contact admin</string>

    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <string-array name="array_units">
        <item>tons</item>
        <item>kg</item>
        <item>mg</item>
        <item>l</item>
        <item>g</item>
    </string-array>

    <string name="OnOff_flashlight">On/Off flashlight</string>
    <string name="OnOff_QR_decoding">On/Off QR decoding</string>
    <string name="camera_permission_request_was_denied">Camera permission request was denied.</string>
    <string name="camera_access_is_required_to_display_the_camera_preview">Camera access is required to display the camera preview.</string>
    <string name="permission_is_not_available_Requesting_camera_permission">Permission is not available. Requesting camera permission.</string>
    <string name="ok">Ok</string>
    <string name="permission_is_not_available">Permission is not available. Requesting gallery permission.</string>
    <string name="permission_callback_called">Permission callback called-------</string>
    <string name="camera_permission_was_granted">Camera permission was granted.</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="cold_store_management">Cold store management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farmer_field">Farmer Field</string>
    <string name="farm">farm</string>
    <string name="crop">crop</string>
    <string name="crop_variety">crop variety</string>
    <string name="district">District</string>
    <string name="name">Name</string>
    <string name="variety">Variety</string>
    <string name="enter_district">Enter district</string>
    <string name="sample_area">Sample area</string>
    <string name="your_plot_is_successfully_added">Your plot is successfully added</string>
    <string name="mark_field_boundary">Mark field boundary</string>
    <string name="save">Save</string>
    <string name="not_able_to_get_crops">Not able to get crops</string>
    <string name="not_able_to_get_crops_variety">Not able to get crops variety</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="update">update</string>
    <string name="farmer_id">Farmer id</string>
    <string name="view_all">View all</string>
    <string name="internet_issue">Internet issue</string>
    <string name="double_click_to_exit">Double click to exit</string>
    <string name="sample_consignment">Sample consignment</string>
    <string name="done_by">Done by</string>
    <string name="logout">Logout</string>
    <string name="scan_detail">Scan detail</string>
    <string name="date">Date</string>
    <string name="sample_detail">Sample detail</string>
    <string name="sample_id">Sample id*</string>
    <string name="proceed">Proceed</string>
    <string name="done">Done</string>
    <string name="lot_id">Lot Id</string>
    <string-array name="array_filter">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>All</item>
    </string-array>
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <string name="activity_device">Device</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="device">Device:</string>
</resources>