<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <include layout="@layout/custom_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"

                        android:text="@string/farm_code" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvFarmCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:editable="false"


                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"

                        android:text="@string/name" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvFarmName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/name"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

              
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:singleLine="true"

                                android:text="@string/crop" />

                        </com.google.android.material.textfield.TextInputLayout>

                                    <Spinner
                            android:id="@+id/spinnerCrop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="85"
                            android:paddingLeft="10dp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:singleLine="true"

                                android:text="@string/variety" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Spinner
                            android:id="@+id/spinnerCropVariety"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="85" />
                    </LinearLayout>

                </LinearLayout>

             
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"

                        android:text="@string/district" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/enter_district"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 

                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"

                        android:text="@string/area" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/sample_area"
                    android:paddingLeft="10dp"
                    android:singleLine="true"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                  />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"

                        android:text="@string/address" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/address"
                    android:paddingLeft="10dp"
                    android:singleLine="true"

                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                  />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/tvPlotAdded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/your_plot_is_successfully_added"
                    android:visibility="gone" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />


                <Button
                    android:id="@+id/btnMarkField"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="?attr/colorPrimary"
                    android:text="@string/mark_field_boundary"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cdFarmMap"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <fragment
                            android:id="@+id/mapUpdateFieldDetail"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/btAddBoundary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="2dp"
                    android:background="?attr/colorPrimary"
                    android:text="Update the boundary"
                    android:textColor="@color/colorWhite" />


                <Button
                    android:id="@+id/btnAddFarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="2dp"
                    android:background="?attr/colorPrimary"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <include
        layout="@layout/layout_progress"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>